--- a/doc/libconfig.texi
+++ b/doc/libconfig.texi
@@ -6,8 +6,8 @@
 @setfilename libconfig.info
 @settitle libconfig
 
-@set edition 1.7.4
-@set update-date 22 Nov 2022
+@set edition 1.8
+@set update-date 1 May 2025
 @set subtitle-text A Library For Processing Structured Configuration Files
 @set author-text Mark A.@: Lindner
 
@@ -38,7 +38,7 @@
 
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2004-2023  Mark A Lindner
+Copyright @copyright{} 2004-2025  Mark A Lindner
 
 Permission is granted to make and distribute verbatim copies of
 this manual provided the copyright notice and this permission notice
@@ -404,6 +404,7 @@ application:
     bigint = 9223372036854775807L;
     columns = [ "Last Name", "First Name", "MI" ];
     bitmask = 0x1FC3;	// hex
+    bitmask2 = 0b1011; // binary
     umask = 0027;	// octal. Range limited to that of "int"
   @};
 @};
@@ -509,24 +510,27 @@ The last element in a list may be followed by a comma, which will be ignored.
 @comment  node-name,  next,  previous,  up
 @section Integer Values
 
-Integers can be represented in one of two ways: as a series of one or
-more decimal digits (@samp{0} - @samp{9}), with an optional leading
-sign character (@samp{+} or @samp{-}); or as a hexadecimal value
-consisting of the characters @samp{0x} followed by a series of one or
-more hexadecimal digits (@samp{0} - @samp{9}, @samp{A} - @samp{F},
-@samp{a} - @samp{f}). Additionally, octal notation integers (that is,
-those having a leading zero with non-zero value) are also allowed.
+Integers can be represented in one of two ways: as a series of one or more
+decimal digits (@samp{0} - @samp{9}), with an optional leading sign character
+(@samp{+} or @samp{-}); as a hexadecimal value consisting of the characters
+@samp{0x} followed by a series of one or more hexadecimal digits (@samp{0} -
+@samp{9}, @samp{A} - @samp{F}, @samp{a} - @samp{f}); or (as of version 1.8 of
+the library) as a binary value consisting of the characters @samp{0b} followed
+by a series of one or more binary digits (@samp{0} - @samp{1}). Additionally,
+octal notation integers (that is, those having a leading zero with non-zero value)
+are also allowed.
 
 @node 64-bit Integer Values, Floating Point Values, Integer Values, Configuration Files
 @comment  node-name,  next,  previous,  up
 @section 64-bit Integer Values
 
-Long long (64-bit) integers are represented identically to integers,
-except that an `L' character is appended to indicate a 64-bit
-value. For example, @samp{0L} indicates a 64-bit integer value 0.  As
-of version 1.5 of the library, the trailing `L' is optional; if the
-integer value exceeds the range of a 32-bit integer, it will
-automatically be interpreted as a 64-bit integer.
+Long long (64-bit) integers are represented identically to integers, except
+that an `L' character is appended to indicate a 64-bit value. For example,
+@samp{0L} indicates a 64-bit integer value 0.  As of version 1.5 of the
+library, the trailing `L' is optional; if the integer value exceeds the range
+of a 32-bit integer, it will automatically be interpreted as a 64-bit integer.
+As of version 1.7.4 of the library this behavior is extended to hexadecimal
+(and binary) integers as well.
 
 The @i{integer} and @i{64-bit integer} setting types are interchangeable to the
 extent that a conversion between the corresponding native types would not
@@ -2204,11 +2208,12 @@ These methods get and set the external format for the setting.
 
 @tindex Setting::Format
 The @var{Setting::Format} enumeration consists of the following
-constants: @code{FormatDefault} and @code{FormatHex}. All settings
-support the @code{FormatDefault} format. The @code{FormatHex} format
-specifies hexadecimal formatting for integer values, and hence only
-applies to settings of type @code{TypeInt} and @code{TypeInt64}. If
-@var{format} is invalid for the given setting, it is ignored.
+constants: @code{FormatDefault}, @code{FormatBin}, and @code{FormatHex}.
+All settings support the @code{FormatDefault} format. The @code{FormatHex}
+and @code{FormatBin} formats specify hexadecimal and binary formatting,
+respectively, for integer values; hence these only apply to settings of
+type @code{TypeInt} and @code{TypeInt64}. If @var{format} is invalid
+for the given setting, it is ignored.
 
 @end deftypemethod
 
@@ -2464,6 +2469,8 @@ directives are not part of the grammar, so they are not included here.
       <boolean>
     | <integer>
     | <integer64>
+    | <bin>
+    | <bin64>
     | <hex>
     | <hex64>
     | <float>
@@ -2501,6 +2508,10 @@ Terminals are defined below as regular expressions:
 @code{[-+]?[0-9]+}
 @item @code{<integer64>} @tab
 @code{[-+]?[0-9]+L(L)?}
+@item @code{<bin>} @tab
+@code{0[bB][01]+}
+@item @code{<bin64>} @tab
+@code{0[bB][01]+L(L)?}
 @item @code{<hex>} @tab
 @code{0[Xx][0-9A-Fa-f]+}
 @item @code{<hex64>} @tab
